[package]
name = "primality_jones"
version = "0.2.0"
edition = "2021"
authors = ["Maxwell Santoro"]
description = "A high-performance Mersenne number primality testing library"
license = "MIT"
repository = "https://github.com/maxwellsantoro/primality_jones"

[lib]
name = "primality_jones"
crate-type = ["cdylib", "rlib"]

[dependencies]
num-bigint = { version = "0.4", features = ["rand"] }
num-traits = "0.2"
rand = "0.8"
indicatif = "0.17"
chrono = "0.4"
pyo3 = { version = "0.19", features = ["extension-module"] }

[features]
default = ["pyo3/extension-module"]

[build-dependencies]
pyo3-build-config = "0.19"
