[package]
name = "primality_jones"
version = "0.2.0"
edition = "2021"
authors = ["Maxwell Santoro"]
description = "A high-performance Mersenne number primality testing library"
license = "MIT"
repository = "https://github.com/maxwellsantoro/primality_jones"

[lib]
name = "primality_jones"
crate-type = ["cdylib", "rlib"]

[dependencies]
num-bigint = { version = "0.4", features = ["rand"] }
num-traits = "0.2"
rand = "0.8"
indicatif = "0.17"
chrono = "0.4"
pyo3 = { version = "0.19", features = ["extension-module"] }

[dev-dependencies]
proptest = "1.3"
criterion = "0.5"
tempfile = "3.8"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
reqwest = { version = "0.11", features = ["json"] }
tokio = { version = "1.0", features = ["full"] }

[features]
default = ["pyo3/extension-module"]

[build-dependencies]
pyo3-build-config = "0.19"

[[bench]]
name = "benchmarks"
harness = false
